# telegram_bot_omar_3

./: .env.template  .gitignore  README.txt  main.py  pyproject.toml  requirements.txt
data/: default_emoji.txt
data/PUBLIC/canvases/: default.csv  friends.csv  maxi.csv
scripts/: check_users.py  migrate_users_to_json.py  set_default_nickname.py  user_editor_console.py
src/omar_bot/: bot.py
src/omar_bot/config/: settings.py
src/omar_bot/handlers/: callback_handlers.py  user_commands.py
src/omar_bot/services/: santa.py  user_service.py
src/omar_bot/utils/: helpers.py  utils.py
src/telegram_bot_omar.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
tests/unit/: test_architect.py  test_user_service.py
